@@ -17,7 +17,7 @@ PORTAGE_GPG_DIR="/etc/portage/gnupg"
 # CHOST="i686-pc-linux-gnu"
 
 # Compiler and linker flags
-CFLAGS="-Os -march=pentium3 -mtune=core2 -fomit-frame-pointer -pipe"
+CFLAGS="-Os -march=pentium3 -mtune=core2 -mfpmath=sse -fomit-frame-pointer -pipe"
 CXXFLAGS="${CFLAGS}"
 LDFLAGS="${LDFLAGS} -Wl,-O,1,-z,combreloc"
 
